# nonebot-plugin-whats-talk-gemini

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-13-at-only-trigger.md
docs/superpowers/specs/: 2026-05-13-at-only-trigger-design.md
nonebot_plugin_whats_talk_gemini/: __init__.py
