[tool.poetry]
name = "nonebot-plugin-whats-talk-gemini"
version = "0.0.7"
description = "分析群聊记录，生成近期讨论话题的总结。"
authors = ["hakunomiko <48401273+hakunomiko@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/hakunomiko/nonebot-plugin-whats-talk-gemini"
keywords = ["nonebot", "nonebot2", "plugin"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = ">=0.27,<1.0"
nonebot2 = "^2.3.0"
nonebot-adapter-onebot = ">=2.0.0-beta.1"
nonebot_plugin_apscheduler = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "RUF"
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "UP006",  # non-pep585-annotation
    "UP035",  # deprecated-import
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]
